force-app/main/default/objects/Project__c/fields/Durations_in_months__c.field-meta.xml
<CustomField>
    <fullName>Durations_in_months__c</fullName>
    <label>Durations in months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>