force-app/main/default/objects/Project__c/fields/Employee_1__c.field-meta.xml
<CustomField>
    <fullName>Employee_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee 1</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>