force-app/main/default/objects/Project__c/fields/Employee_2__c.field-meta.xml
<CustomField>
    <fullName>Employee_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee 2</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Projects (Employee 2)</relationshipLabel>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>