force-app/main/default/objects/Project__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Manager</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Projects (Project Manager)</relationshipLabel>
    <relationshipName>Projects3</relationshipName>
    <type>Lookup</type>
</CustomField>